# MTO360

./: docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  README_FASTAPI.md  alembic.ini  bootstrap.py  check_pg_tables.py  check_schema.py  db.sqlite3  fix_enum.py  init_database.py  inspect_db.py  migration_log.txt  pyproject.toml  repo_debug.txt  router_debug.txt  router_error.txt  test_api_verification.py  test_procurement_db.py  test_scheduling_api.py  upgrade_log.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_16_0026-add_document_linking_and_delivery_date.py  2025_11_16_1122-4d39f0412da7_add_email_tracking_to_quotations.py  2025_11_23_2048-add_prod_scheduling_add_production_scheduling_tables.py  2025_11_24_0000-add_permissions_roles_add_permissions_and_roles_tables.py  2025_11_24_1230-update_so_status_enum_update_sales_order_status_enum_for_production.py  2025_11_24_2145-add_quality_mgmt_add_quality_management_system.py  2026_05_15_1200-fix_bomitem_component_fix_bomitem_component_not_null.py  2026_05_15_1201-tighten_mo_so_item_tighten_mo_sales_order_item_id.py  2026_05_15_1202-rename_proc_rfq_enums_rename_procurement_rfq_and_quote_enums.py  (+2 more)
backend/app/: README.md  __init__.py  alembic.ini  dependencies.py  main.py
backend/scripts/: create_user.py  seed_data.py  seed_quality_permissions.py
backend/tests/: INTEGRATION_TEST_GUIDE.md  __init__.py  conftest.py  test_document_locking.py  test_document_traceability.py  test_filtering_search.py  test_sales_workflow_integration.py  test_validation_errors.py
(+415 files in other folders)
